--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-light shadow-sm">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="#"
+        <a class="navbar-brand fw-bold" href="index.html"
           ><img src="assets/img/seenandsold.webp" alt="SEEN & SOLD"
         /></a>
         <button
@@ -58,7 +58,7 @@
           <a class="nav-link fs-5 px-4 fw-bold" href="#">How it Works</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">About</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">Contact Us</a>
-          <a class="btn btn-yellow btn-sm fs-5 ms-3" href="#">Consult now</a>
+          <a class="btn btn-yellow btn-sm fs-5 ms-3" href="consult-now.html">Consult now</a>
           <a class="btn btn-outline-secondary btn-sm fs-5 ms-2" href="#"
             >Sign in</a
           >
@@ -69,13 +69,16 @@
     <!-- Offcanvas Mobile Menu -->
     <div class="offcanvas offcanvas-start" tabindex="-1" id="mobileMenu">
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title">
-          <img
-            src="assets/img/seenandsold.webp"
-            alt="Logo"
-            style="max-height: 70px"
-          />
-        </h5>
+        <a href="index.html">
+          <h5 class="offcanvas-title">
+            <img
+              src="assets/img/seenandsold.webp"
+              alt="Logo"
+              style="max-height: 70px"
+              alt="SEEN & SOLD"
+            />
+          </h5>
+        </a>
         <button
           type="button"
           class="btn-close text-reset"
@@ -106,7 +109,7 @@
               We help businesses like yours earn more customers, standout from
               competitors, make more money
             </p>
-            <a href="#" class="btn btn-yellow px-4 py-2 mt-2">Consult now</a>
+            <a href="consult-now.html" class="btn btn-yellow px-4 py-2 mt-2">Consult now</a>
           </div>
           <div
             class="col-lg-6 col-md-6 com-sm-6 col-6 text-center mt-4 mt-lg-0"
@@ -860,12 +863,14 @@
       <div class="container pt-4 pb-4">
         <div class="row align-items-center">
           <div class="col-md-6 mb-3 mb-md-0 d-flex align-items-center">
-            <img
-              src="assets/img/seenandsold.webp"
-              alt="Logo"
-              height="50"
-              class="me-3"
-            />
+            <a href="index.html">
+              <img
+                src="assets/img/seenandsold.webp"
+                alt="SEEN & SOLD"
+                height="50"
+                class="me-3"
+              />
+            </a>
             <div>
               <h5 class="mb-1 fw-bold text-white">
                 Interested in Collaboration?
@@ -896,12 +901,14 @@
         <div class="row">
           <!-- Left Column -->
           <div class="col-md-4 mb-4 mb-md-0">
-            <img
-              src="assets/img/seenandsold.webp"
-              alt="Seen & Sold"
-              height="50"
-              class="mb-3"
-            />
+            <a href="index.html">
+              <img
+                src="assets/img/seenandsold.webp"
+                alt="Seen & Sold"
+                height="50"
+                class="mb-3"
+              />
+            </a>
             <p>
               Some footer text about the Agency. Just a little description to
               help people understand you better
@@ -957,13 +964,18 @@
         <!-- Bottom Footer -->
         <div class="d-flex justify-content-center align-items-center">
           <small class="text-dark"
-            ><a href="#" class="text-decoration-none text-dark"
+            ><a
+              href="terms-and-conditions.html"
+              class="text-decoration-none text-dark"
               >Terms and conditions
             </a>
             |
           </small>
           <small class="text-dark"
-            ><a href="#" class="text-decoration-none text-dark">
+            ><a
+              href="privacy-policy.html"
+              class="text-decoration-none text-dark"
+            >
               &nbsp;Privacy policy</a
             ></small
           >
@@ -985,13 +997,15 @@
 
         <!-- Consult Now -->
         <div class="flex-fill" style="margin-top: -30px">
+          <a href="consult-now.html" class="text-decoration-none">
           <div
             class="bg-light rounded-circle mx-auto mb-1 d-flex align-items-center justify-content-center"
             style="width: 40px; height: 40px"
           >
             <i class="fa fa-plus fs-5 text-secondary d-block mt-1"></i>
           </div>
-          <small class="text-secondary">Consult Now</small>
+          <small class="text-secondary"><a href="consult-now.html" class="text-decoration-none">Consult Now</a></small>
+          </a>
         </div>
 
         <!-- Profile -->
@@ -999,14 +1013,6 @@
           <i class="fa fa-user text-secondary fs-4 d-block"></i>
           <small class="text-secondary">Profile</small>
         </div>
-      </div>
-
-      <!-- Drag Handle -->
-      <div class="text-center mt-2">
-        <div
-          style="width: 120px; height: 5px"
-          class="bg-secondary bg-opacity-25 rounded-pill mx-auto"
-        ></div>
       </div>
     </footer>
 
