--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -80,13 +80,13 @@
         ></button>
       </div>
       <div class="offcanvas-body">
-        <a href="#"><i class="fa fa-home"></i> Home</a>
+        <a href="index.html"><i class="fa fa-home"></i> Home</a>
         <a href="#"><i class="fa fa-user"></i> My Profile</a>
         <a href="#"><i class="fa fa-briefcase"></i> Services</a>
-        <a href="#"><i class="fa fa-calendar"></i> My Appointment</a>
+        <a href="consult-now.html"><i class="fa fa-calendar"></i> My Appointment</a>
         <a href="#"><i class="fa fa-info-circle"></i> About</a>
-        <a href="#"><i class="fa fa-file"></i> Term & Conditions</a>
-        <a href="#"><i class="fa fa-lock"></i> Privacy Policy</a>
+        <a href="terms-and-conditions.html"><i class="fa fa-file"></i> Term & Conditions</a>
+        <a href="privacy-policy.html"><i class="fa fa-lock"></i> Privacy Policy</a>
         <a href="#"><i class="fa fa-bullseye"></i> Our Mission</a>
         <a href="#"><i class="fa fa-comments"></i> Contact Us</a>
         <a href="#"><i class="fa fa-question-circle"></i> Help & Support</a>
@@ -270,19 +270,24 @@
       >
         <!-- Home -->
         <div class="flex-fill">
+          <a href="index.html" class="text-decoration-none">
           <i class="fa fa-house text-warning fs-4 d-block"></i>
           <small class="text-warning">Home</small>
+          </a>
         </div>
 
         <!-- Consult Now -->
         <div class="flex-fill" style="margin-top: -30px">
+          <a href="consult-now.html" class="text-decoration-none">
           <div
             class="bg-light rounded-circle mx-auto mb-1 d-flex align-items-center justify-content-center"
             style="width: 40px; height: 40px"
           >
             <i class="fa fa-plus fs-5 text-secondary d-block mt-1"></i>
           </div>
-          <small class="text-secondary"><a href="consult-now.html" class="text-decoration-none">Consult Now</a></small>
+          <small class="text-secondary">Consult Now</small>
+          </a>
+
         </div>
 
         <!-- Profile -->
