--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seen & Sold | Landing Page</title>
+    <title>Seen & Sold | Home Page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -86,13 +86,13 @@
         ></button>
       </div>
       <div class="offcanvas-body">
-        <a href="#"><i class="fa fa-home"></i> Home</a>
+        <a href="index.html"><i class="fa fa-home"></i> Home</a>
         <a href="#"><i class="fa fa-user"></i> My Profile</a>
         <a href="#"><i class="fa fa-briefcase"></i> Services</a>
-        <a href="#"><i class="fa fa-calendar"></i> My Appointment</a>
+        <a href="consult-now.html"><i class="fa fa-calendar"></i> My Appointment</a>
         <a href="#"><i class="fa fa-info-circle"></i> About</a>
-        <a href="#"><i class="fa fa-file"></i> Term & Conditions</a>
-        <a href="#"><i class="fa fa-lock"></i> Privacy Policy</a>
+        <a href="terms-and-conditions.html"><i class="fa fa-file"></i> Term & Conditions</a>
+        <a href="privacy-policy.html"><i class="fa fa-lock"></i> Privacy Policy</a>
         <a href="#"><i class="fa fa-bullseye"></i> Our Mission</a>
         <a href="#"><i class="fa fa-comments"></i> Contact Us</a>
         <a href="#"><i class="fa fa-question-circle"></i> Help & Support</a>
@@ -991,8 +991,10 @@
       >
         <!-- Home -->
         <div class="flex-fill">
+          <a href="index.html" class="text-decoration-none">
           <i class="fa fa-house text-warning fs-4 d-block"></i>
           <small class="text-warning">Home</small>
+          </a>
         </div>
 
         <!-- Consult Now -->
@@ -1004,7 +1006,7 @@
           >
             <i class="fa fa-plus fs-5 text-secondary d-block mt-1"></i>
           </div>
-          <small class="text-secondary"><a href="consult-now.html" class="text-decoration-none">Consult Now</a></small>
+          <small class="text-secondary">Consult Now</small>
           </a>
         </div>
 
