--- a/consult-now.html
+++ b/consult-now.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seen & Sold | Consult Now</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/seenandsold.webp">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +20,7 @@
     <!-- Top Bar -->
     <div class="d-none d-lg-block top-bar text-white text-center">
       <div class="container d-flex justify-content-between">
-        <div class="fs-5"><i class="fa fa-envelope me-2"></i> info@xyz.com</div>
+        <div class="fs-5"><i class="fa fa-envelope me-2"></i> hello@seenandsold.in</div>
         <div class="fs-5">
           <a href="#" class="text-white me-3"
             ><i class="fab fa-facebook"></i
@@ -48,7 +49,7 @@
         </button>
 
         <div class="d-none d-lg-flex ms-auto align-items-center">
-          <a class="nav-link fs-5 px-4 fw-bold" href="#">Home</a>
+          <a class="nav-link fs-5 px-4 fw-bold" href="index.html">Home</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">Services</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">How it Works</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">About</a>
@@ -805,9 +806,9 @@
           <!-- Right Column -->
           <div class="col-md-4">
             <h6 class="fw-bold">Address</h6>
-            <p class="mb-0">Design Agency Head Office.</p>
-            <p class="mb-0">Airport Road</p>
-            <p>United Arab Emirates</p>
+            <p class="mb-0">Office No. IX/6066,</p>
+            <p class="mb-0">Gandhi Nagar,</p>
+            <p>Delhi 110031</p>
           </div>
         </div>
 
