--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seen & Sold | Home Page</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/seenandsold.webp">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +25,7 @@
     <!-- Top Bar -->
     <div class="d-none d-lg-block top-bar text-white text-center">
       <div class="container d-flex justify-content-between">
-        <div class="fs-5"><i class="fa fa-envelope me-2"></i> info@xyz.com</div>
+        <div class="fs-5"><i class="fa fa-envelope me-2"></i> hello@seenandsold.in</div>
         <div class="fs-5">
           <a href="#" class="text-white me-3"
             ><i class="fab fa-facebook"></i
@@ -53,7 +54,7 @@
         </button>
 
         <div class="d-none d-lg-flex ms-auto align-items-center">
-          <a class="nav-link fs-5 px-4 fw-bold" href="#">Home</a>
+          <a class="nav-link fs-5 px-4 fw-bold" href="index.html">Home</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">Services</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">How it Works</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">About</a>
@@ -112,10 +113,9 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 col-md-6 com-sm-6 col-6">
-            <h1>Increase Your Customers Loyalty and Satisfaction</h1>
+            <h1>Turn Attention into Sales — With Influencer-Led Video Commerce & Viral Campaigns</h1>
             <p class="my-3">
-              We help businesses like yours earn more customers, standout from
-              competitors, make more money
+              Get your brand SEEN by the right audience and SOLD to the right buyer.
             </p>
             <!-- Button to trigger modal -->
             <button
@@ -124,7 +124,7 @@
               data-bs-toggle="modal"
               data-bs-target="#largeModal"
             >
-              Consult now
+              Book a Strategy Call
             </button>
             <!-- <a href="consult-now.html" class="btn btn-yellow px-4 py-2 mt-2">Consult now</a> -->
             <!-- Large Modal -->
@@ -1657,9 +1657,9 @@
           <!-- Right Column -->
           <div class="col-md-4">
             <h6 class="fw-bold">Address</h6>
-            <p class="mb-0">Design Agency Head Office.</p>
-            <p class="mb-0">Airport Road</p>
-            <p>United Arab Emirates</p>
+            <p class="mb-0">Office No. IX/6066,</p>
+            <p class="mb-0">Gandhi Nagar,</p>
+            <p>Delhi 110031</p>
           </div>
         </div>
 
