--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seen & Sold | Privacy Policy</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/seenandsold.webp">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +20,7 @@
     <!-- Top Bar -->
     <div class="d-none d-lg-block top-bar text-white text-center">
       <div class="container d-flex justify-content-between">
-        <div class="fs-5"><i class="fa fa-envelope me-2"></i> info@xyz.com</div>
+        <div class="fs-5"><i class="fa fa-envelope me-2"></i> hello@seenandsold.in</div>
         <div class="fs-5">
           <a href="#" class="text-white me-3"
             ><i class="fab fa-facebook"></i
@@ -48,12 +49,14 @@
         </button>
 
         <div class="d-none d-lg-flex ms-auto align-items-center">
-          <a class="nav-link fs-5 px-4 fw-bold" href="#">Home</a>
+          <a class="nav-link fs-5 px-4 fw-bold" href="index.html">Home</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">Services</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">How it Works</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">About</a>
           <a class="nav-link fs-5 px-4 fw-bold" href="#">Contact Us</a>
-          <a class="btn btn-yellow btn-sm fs-5 ms-3" href="consult-now.html">Consult now</a>
+          <a class="btn btn-yellow btn-sm fs-5 ms-3" href="consult-now.html"
+            >Consult now</a
+          >
           <a class="btn btn-outline-secondary btn-sm fs-5 ms-2" href="#"
             >Sign in</a
           >
@@ -83,10 +86,16 @@
         <a href="index.html"><i class="fa fa-home"></i> Home</a>
         <a href="#"><i class="fa fa-user"></i> My Profile</a>
         <a href="#"><i class="fa fa-briefcase"></i> Services</a>
-        <a href="consult-now.html"><i class="fa fa-calendar"></i> My Appointment</a>
+        <a href="consult-now.html"
+          ><i class="fa fa-calendar"></i> My Appointment</a
+        >
         <a href="#"><i class="fa fa-info-circle"></i> About</a>
-        <a href="terms-and-conditions.html"><i class="fa fa-file"></i> Term & Conditions</a>
-        <a href="privacy-policy.html"><i class="fa fa-lock"></i> Privacy Policy</a>
+        <a href="terms-and-conditions.html"
+          ><i class="fa fa-file"></i> Term & Conditions</a
+        >
+        <a href="privacy-policy.html"
+          ><i class="fa fa-lock"></i> Privacy Policy</a
+        >
         <a href="#"><i class="fa fa-bullseye"></i> Our Mission</a>
         <a href="#"><i class="fa fa-comments"></i> Contact Us</a>
         <a href="#"><i class="fa fa-question-circle"></i> Help & Support</a>
@@ -95,43 +104,115 @@
 
     <div class="container my-5">
       <div class="card shadow-sm rounded-4 p-4">
-        <h5 class="text-warning fw-bold">Privacy Policy</h5>
-        <h6 class="fw-semibold mt-3">Your Agreement</h6>
+        <h1 class="text-warning fw-bold fs-4">Privacy Policy</h1>
 
         <div class="terms-scroll mt-2 mb-4 px-1">
-          <p><strong>Last Revised:</strong> December 16, 2013</p>
+          <p>Privacy Policy for Seen and Sold</p>
+          <p>Effective Date: July 27, 2025</p>
+          <p><br /></p>
+          <p><b>1. Introduction</b></p>
           <p>
-            Welcome to www.lorem-ipsum.info. This site is provided as a service
-            to our visitors and may be used for informational purposes only.
-            Because the Terms and Conditions contain legal obligations, please
-            read them carefully.
+            Seen and Sold (“Company”, “we”, “us”, or “our”) operates the website
+            www.seenandsold.in. This Privacy Policy describes how we collect,
+            use, disclose, and protect your personal information in accordance
+            with the Information Technology Act, 2000 and its amendments, and
+            the guidelines issued by Google and other regulatory authorities in
+            India.
           </p>
-          <p><strong>1. YOUR AGREEMENT</strong></p>
+          <p><br /></p>
+          <p><b>2. Information We Collect</b></p>
+          <p>a. Personal Information:</p>
           <p>
-            By using this Site, you agree to be bound by, and to comply with,
-            these Terms and Conditions. If you do not agree to these Terms and
-            Conditions, please do not use this site.
+            When you use our website, fill out a form, or engage with our
+            services, we may collect:
+          </p>
+          <p>Full name</p>
+          <p>Contact number</p>
+          <p>Email address</p>
+          <p>Brand/Business name</p>
+          <p>
+            Payment information (collected securely via third-party payment
+            gateways)
+          </p>
+          <p>Social media links or website URLs</p>
+          <p><br /></p>
+          <p>b. Non-Personal Information:</p>
+          <p>Automatically collected through cookies and analytics tools:</p>
+          <p>IP address</p>
+          <p>Browser type and version</p>
+          <p>Device information</p>
+          <p>Pages visited and time spent</p>
+          <p><br /></p>
+          <p><b>3. Use of Information</b></p>
+          <p>We use your data for:</p>
+          <p>
+            Providing and improving our marketing and video commerce services
+          </p>
+          <p>Processing payments securely</p>
+          <p>Sending updates, offers, and service communication</p>
+          <p>Responding to inquiries and providing support</p>
+          <p>Analytics and performance tracking</p>
+          <p><br /></p>
+          <p><b>4. Sharing of Information</b></p>
+          <p>
+            We do not sell or rent your personal information. We may share your
+            data only with:
           </p>
           <p>
-            PLEASE NOTE: We reserve the right, at our sole discretion, to
-            change, modify or otherwise alter these Terms and Conditions at any
-            time. Unless otherwise indicated, amendments will become effective
-            immediately. Please review these Terms and Conditions periodically.
-            Your continued use of the Site following the posting of changes
-            and/or modifications will constitute your acceptance of the revised
-            Terms and Conditions...
+            Trusted third-party service providers (like Razorpay, Cashfree,
+            PhonePe) for secure transactions
           </p>
+          <p>Marketing and CRM tools for better customer experience</p>
+          <p>Government agencies upon lawful request</p>
+          <p><br /></p>
+          <p><b>5. Cookies and Tracking</b></p>
           <p>
-            <strong>2. PRIVACY</strong><br />
-            Please review our Privacy Policy, which also governs your visit to
-            this Site, to understand our practices.
+            We use cookies and third-party analytics tools (e.g., Google
+            Analytics, Meta Pixel) to understand user behavior and optimize our
+            site. You can manage cookie settings via your browser.
           </p>
+          <p><br /></p>
+          <p><b>6. Data Security</b></p>
           <p>
-            <strong>3. LINKED SITES</strong><br />
-            This Site may contain links to other independent third-party Web
-            sites ("Linked Sites"). These Linked Sites are provided solely as a
-            convenience to our visitors
+            Your data is stored on secure servers with end-to-end encryption
+            where applicable. We adhere to PCI-DSS and ISO standards when
+            handling payment information through our gateways.
           </p>
+          <p><br /></p>
+          <p><b>7. Your Rights</b></p>
+          <p>
+            You may request to access, correct, or delete your personal data by
+            contacting us at support@seenandsold.in. You may also opt out of
+            marketing communications.
+          </p>
+          <p><br /></p>
+          <p><b>8. Payment Gateway Compliance</b></p>
+          <p>
+            Our payment processing partners (Razorpay, Cashfree, PhonePe) comply
+            with RBI guidelines. We do not store your CVV or sensitive card data
+            on our servers.
+          </p>
+          <p><br /></p>
+          <p><b>9. Children’s Privacy</b></p>
+          <p>
+            Our services are not intended for individuals under the age of 18.
+            We do not knowingly collect data from minors.
+          </p>
+          <p><br /></p>
+          <p><b>10. Changes to This Policy</b></p>
+          <p>
+            We may update this Privacy Policy occasionally. Changes will be
+            posted with a revised “Effective Date.”
+          </p>
+          <p><br /></p>
+          <p><b>11. Contact Us</b></p>
+          <p>For any questions about this Privacy Policy, contact:</p>
+          <p>📧 Email: support@seenandsold.in</p>
+          <p>
+            📍 Registered Address: Office No. IX/6066, Gandhi Nagar, Delhi
+            110031
+          </p>
+          <p>📞 Phone: +91 8877004937</p>
         </div>
       </div>
     </div>
@@ -232,9 +313,9 @@
           <!-- Right Column -->
           <div class="col-md-4">
             <h6 class="fw-bold">Address</h6>
-            <p class="mb-0">Design Agency Head Office.</p>
-            <p class="mb-0">Airport Road</p>
-            <p>United Arab Emirates</p>
+            <p class="mb-0">Office No. IX/6066,</p>
+            <p class="mb-0">Gandhi Nagar,</p>
+            <p>Delhi 110031</p>
           </div>
         </div>
 
@@ -271,23 +352,22 @@
         <!-- Home -->
         <div class="flex-fill">
           <a href="index.html" class="text-decoration-none">
-          <i class="fa fa-house text-warning fs-4 d-block"></i>
-          <small class="text-warning">Home</small>
+            <i class="fa fa-house text-warning fs-4 d-block"></i>
+            <small class="text-warning">Home</small>
           </a>
         </div>
 
         <!-- Consult Now -->
         <div class="flex-fill" style="margin-top: -30px">
           <a href="consult-now.html" class="text-decoration-none">
-          <div
-            class="bg-light rounded-circle mx-auto mb-1 d-flex align-items-center justify-content-center"
-            style="width: 40px; height: 40px"
-          >
-            <i class="fa fa-plus fs-5 text-secondary d-block mt-1"></i>
-          </div>
-          <small class="text-secondary">Consult Now</small>
+            <div
+              class="bg-light rounded-circle mx-auto mb-1 d-flex align-items-center justify-content-center"
+              style="width: 40px; height: 40px"
+            >
+              <i class="fa fa-plus fs-5 text-secondary d-block mt-1"></i>
+            </div>
+            <small class="text-secondary">Consult Now</small>
           </a>
-
         </div>
 
         <!-- Profile -->
